# sprih-reporting-agent

./: .dockerignore  .env.example  .gitignore  .~lock.web_fetch_log.csv#  Architecture.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-server-win.sh  start-server.sh  stop-server.sh  stop.sh  supervisord.conf  web_fetch_log.csv
backend/: __init__.py  config.py  main.py
backend/ai/: registry.py
backend/handlers/: artifact_handler.py  deliverable_handler.py  document_handler.py  file_handler.py  mirror_handler.py  run_handler.py  thread_handler.py
backend/infra/: __init__.py  db.py  google_drive.py  registry.py  storage.py
backend/models/: __init__.py  data_source.py  enterprise.py  google_credentials.py  mirror_credentials.py  research_query.py  search_query.py  thread.py  thread_drive_mapping.py  thread_mirror_mapping.py
backend/routers/: __init__.py  assistants.py  deliverables.py  documents.py  files.py  google_auth.py  mirror.py  runs.py  sources.py  threads.py
backend/schemas/: __init__.py  assistants.py  deliverables.py  documents.py  files.py  google_auth.py  mirror.py  runs.py  sources.py
backend/security/: auth.py
backend/services/: __init__.py  agent_service.py  deliverable_service.py  document_service.py  drive_sync_service.py  (+9 more)
docker/: nginx.conf  supervisord.conf
docs/: ConOps.md  google_drive_integration.md  prd_reporting_poc.md
mcp/: server.py
sandbox-reporting_module/: .env.example  .gitignore  Architecture.md  README.md  docker-compose.yml  start-server.sh  stop-server.sh
scripts/: create_research_eval_dataset.py  create_research_eval_dataset_10.py  retry_failed_eval.py
tests/: __init__.py  conftest.py  test_terminal_tools.py
word-plugin/: .env.development  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
wordgpt-main/: README_cn.md  package-lock.json  package.json
(+139 files in other folders)
