[project]
name = "esg-reporting-agent"
version = "0.1.0"
description = "ESG reporting agent built with LangGraph"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.12",
    "fastapi>=0.135.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.4",
    "httpx>=0.27",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql>=0.2",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.42.0",
    "crawl4ai>=0.8.6",
    "pymupdf>=1.25",
    "langgraph-checkpoint-mysql>=3.0.0",
    "mcp>=1.27.0",
    "pyngrok>=8.0.0",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.49.1",
    "google-auth-oauthlib>=1.3.1",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "langsmith>=0.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
